fixed layout bug in mobile version

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -69,6 +69,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: auto !important;
   }
   .about-left-section,
   .about-right-section {
